<resources>
    <string name="app_name">HtcTest</string>
    <string name="company_name">Название компании</string>
    <string name="competences">Компетенции</string>
    <string name="employees_list">Список работников</string>
    <string name="company_age">Время существования</string>
    <string name="name">Имя: </string>
    <string name="phone_number">Номер телефона: </string>
    <string name="skills">Навыки: </string>
    <string name="ok">OK</string>
    <string name="repeat">Повторить</string>
    <string name="error_has_occurred">Произошла ошибка</string>
    <string name="cant_get_data">Не удалось получить данные от сервера</string>
</resources>