<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/progress_indicator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <ProgressBar
            android:layout_width="30dp"
            android:layout_height="30dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/content"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingVertical="10dp"
        android:paddingHorizontal="15dp">

        <TextView
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_name"/>

        <TextView
            android:id="@+id/company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="7dp"
            />

        <TextView
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_age"/>

        <TextView
            android:id="@+id/company_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="7dp"/>

        <TextView
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/competences"/>

        <TextView
            android:id="@+id/company_competences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="7dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/employees_list"
            android:layout_height="match_parent"
            android:layout_width="match_parent">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

</LinearLayout>